# carbon-pipeline

./: Cargo.toml  README.md
carbon/: Cargo.toml  example.co2  example.hcl  example.yml
carbon/src/: main.rs  runtime.rs
core/: Cargo.toml
core/src/: co2_struct.rs  cyml_import.rs  handlebars_helpers.rs  lib.rs  modules.rs
core/test/: example.cyml  example.xxx  example.yml
modules/dispatcher/: Cargo.toml  Makefile.toml
modules/dispatcher/src/: lib.rs
modules/http_server/: Cargo.toml  Makefile.toml
modules/http_server/src/: lib.rs
modules/http_server/test/load-test/: docker-compose.yml  locustfile.py
modules/mock/: Cargo.toml  Makefile.toml
modules/mock/src/: lib.rs
modules/payload/: Cargo.toml  Makefile.toml
modules/payload/src/: lib.rs
modules/request/: Cargo.toml  Makefile.toml
modules/request/src/: lib.rs
modules/switch/: Cargo.toml  Makefile.toml
modules/switch/src/: lib.rs
