[package]
name = "carbon"
version = "0.0.1"
authors = ["Philippe Assis <codephilippe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_yaml = "0.7.1"
serde_derive = "1.0.115"
assert-type-eq = "0.1.0"
serde = "1.0.111"
regex = "1.4.1"
libloading = "0.6.4"
serde_json = "1.0.60"
carbon-core = { path = "../core", features = ["modules"] }
chrono = "0.4.19"
log = "0.3.8"

