[package]
name = "carbon-core"
version = "0.1.0"
authors = ["Philippe Assis <codephilippe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_yaml = "0.8.21"
serde_derive = "1.0.115"
assert-type-eq = "0.1.0"
serde = "1.0.111"
regex = "1.4.1"
libloading = "0.7.0"
serde_json = "1.0.60"
handlebars = "4.1.3"
handlebars_misc_helpers = "0.12.1"
rcalc_lib = "1.0.0"
log = "0.4.14"
env_logger = "0.9.0"
uuid = { version = "0.8", features = ["serde", "v4"] }

[features]
default = ["cyml", "modules"]
cyml = ["co2"]
co2 = []
modules = ["handlebars_helpers"]
handlebars_helpers = []

[lib]
name = "carbon_core"