[package]
name = "http-server"
version = "0.0.1"
authors = ["Philippe Assis <codephilippe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
carbon-core = { path = "../../core", features = ["modules"] }
actix-web = { git = "https://github.com/PhilippeAssis/actix-web", branch = "3.0" }
actix-rt = "2.2.0"
actix = "0.12.0"
serde_json = "1.0.60"
log = "0.4.14"

[dev-dependencies]
reqwest = "0.11.4"

[lib]
crate-type = ["cdylib", "rlib"]
name = "http_server"
