[package]
name = "payload"
version = "0.0.1"
authors = ["Philippe Assis <codephilippe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
carbon-core = { path = "../../core", features = ["modules"] }
serde_json = "1.0.60"
regex = "1.4.2"

[lib]
crate-type = ["cdylib", "rlib"]
name = "payload"
